Final maquette Accueil

--- a/front-end/src/components/Body/Body.module.scss
+++ b/front-end/src/components/Body/Body.module.scss
@@ -42,6 +42,18 @@
   .featureItem {
     flex: 1;
     padding: 2.5rem;
+    .featureIcon {
+      width: 100px;
+      border: 10px solid #00bc77;
+      border-radius: 50%;
+      padding: 1rem;
+    }
+    .featureItemTitle {
+      color: #222;
+      font-size: 1.25rem;
+      font-weight: bold;
+      margin-bottom: 0.5rem;
+    }
   }
 }
 
@@ -62,5 +74,8 @@
         font-size: 1.2rem;
       }
     }
+  }
+  .features {
+    flex-direction: row;
   }
 }
