--- a/front-end/src/pages/Users/Users.module.scss
+++ b/front-end/src/pages/Users/Users.module.scss
@@ -10,9 +10,17 @@
   margin : 0;
 }
 
-.headertext {
-  font-size: 32px;
-  font-weight: bold;
+.firstChange, .lastChange {
+  margin-right: 1rem;
+  margin-top: 1rem;
+  padding: 10px 10px;
+  background-color: white;
+  border-color:#00bc77;
+  color: #00bc77;
+}
+
+.firstChange::placeholder, .lastChange::placeholder {
+  color: rgba(0, 0, 0, 0.3);
 }
 .bgDark {
   background-color: #12002b;
@@ -48,7 +56,9 @@
   border-color:#00bc77 ;
   color: #00bc77;
 }
-
+.bankaccount {
+  padding-bottom: 1rem;
+}
 .account {
   display: flex;
   justify-content: space-between;
